# Pixa

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
include/Pixa/: Pixa.hpp  pch.hpp
include/Pixa/Common/: Defines.hpp
include/Pixa/Core/: Application.hpp  Assert.hpp  Engine.hpp  Logger.hpp  ResourceManager.hpp  ScopedTimer.hpp  Timer.hpp  Window.hpp
include/Pixa/Graphics/: IBO.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VAO.hpp  VBO.hpp
include/Pixa/Input/: Input.hpp  InputCodes.hpp
include/Pixa/Scene/: Camera.hpp  Entity.hpp  Scene.hpp
res/shaders/: default.frag.glsl  default.vert.glsl
src/: CMakeLists.txt  Pixa.cpp
src/Core/: Engine.cpp  Logger.cpp  ResourceManager.cpp  ScopedTimer.cpp  Timer.cpp  Window.cpp
src/Graphics/: IBO.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp
src/Input/: Input.cpp
src/Scene/: Camera.cpp  Entity.cpp  Scene.cpp
test/: CMakeLists.txt  Main.cpp
